# django_restframework_shoestore

./: README.md  db.sqlite3  manage.py  pyproject.toml
djrf_shoestore/: asgi.py  settings.py  urls.py  wsgi.py
homepage/: admin.py  models.py  serializer.py  views.py
homepage/management/commands/: bootstrap_data.py
homepage/migrations/: 0001_initial.py  0002_auto_20200923_2250.py
